force-app/main/default/Objects/RecordTypeId__mdt/RecordTypeId__mdt.object-meta.xml
<CustomObject>
    <description>Easy way to define which record type id to use without having to hit the database with a GET in a flow.</description>
    <label>Record Type Id</label>
    <pluralLabel>Record Type Ids</pluralLabel>
</CustomObject>