force-app/main/default/Objects/RecordTypeId__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>API name of the object on which record type defined</description>
    <inlineHelpText>API name of the object on which record type defined</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>