force-app/main/default/Objects/RecordTypeId__mdt/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <description>Unique identifier for the record type</description>
    <inlineHelpText>Unique identifier for the record type</inlineHelpText>
    <label>Record Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>