force-app/main/default/Objects/RecordTypeId__mdt/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <description>Developer name of the record type</description>
    <inlineHelpText>Developer name of the record type</inlineHelpText>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>